# pyrefly

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  TENSOR_SHAPES_CONTRIBUTING.md  TODO.MD  action.yml  debug.html  github_comment_for_danny.md  index.html  issue.md  llms-full.txt  llms.txt  lunr-index-1748009781489.json  lunr-index-1748096116431.json  lunr-index-1748182536950.json  lunr-index-1748269012208.json  lunr-index-1748441841637.json  lunr-index-1748528220746.json  lunr-index-1748700943882.json  lunr-index-1748787347504.json  lunr-index-1748873843743.json  lunr-index-1749219415358.json  lunr-index-1749305730461.json  lunr-index-1749392142502.json  lunr-index-1749565022196.json  lunr-index-1749737865220.json  lunr-index-1750256250253.json  lunr-index-1750342598623.json  lunr-index-1750601729380.json  lunr-index-1750774632191.json  lunr-index-1750861042878.json  lunr-index-1751206543122.json  lunr-index-1751398714894.json  lunr-index-1751724969919.json  lunr-index-1751811342538.json  (+424 more)
crates/pyrefly_pyo3/: Cargo.toml  README.md  pyproject.toml
pyrefly/: Cargo.toml  pyproject.toml  rust-toolchain
pyrefly/benches/: README.md
pyrefly/lib/: api.rs  cython.rs  deprecation.rs  dunder.rs  lib.rs  overload_expansion.rs  playground.rs  query.rs  stubgen.rs
pyrefly/test_laziness/: OPPORTUNITIES.md  build.rs  mod.rs  test_annotated_recursive_signatures_do_not_force_bodies.md  test_annotated_return_breaks_cascade.md  test_attribute_inherited.md  test_attribute_on_class_itself.md  test_bare_import_forces_exports.md  test_deprecated_forces_exports.md  test_duplicate_import_skips_is_final.md  test_export_exists_forces_exports.md  test_import_class_as_annotation.md  test_import_class_instantiated.md  test_import_function_called.md  test_import_function_unused.md  test_import_star_forces_exports.md  test_is_final_forces_exports.md  test_multiple_inheritance_solves_unique_fields.md  test_special_export_forces_exports.md  test_transitive_import_annotated.md  test_transitive_import_unannotated.md  (+1 more)
(+3301 files in other folders)
