[build-system]
requires = ["maturin>=1.10.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "pyrefly_api"
strip = false

[project]
name = "pyrefly_api"
description = "python bindings for the Pyrefly type checker"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = []